--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,10 @@
         "post-create-project-cmd": [
             "@php artisan key:generate"
         ],
+        "compile": [
+            "php artisan migrate --force",
+            "php artisan storage:link"
+        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
