dejando todo listo para el launch

--- a/composer.json
+++ b/composer.json
@@ -63,5 +63,13 @@
         "optimize-autoloader": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+
+    "extra": {
+        "laravel": {
+            "dont-discover": [
+                "laravel/dusk"
+            ]
+        }
+    }
 }
