--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/scout": "^4.0",
         "laravel/tinker": "^1.0",
         "pusher/pusher-php-server": "^3.0",
-        "doctrine/dbal": "^2.9"
+        "doctrine/dbal": "^2.9",
+        "twilio/sdk": "^5.31"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
