--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/tinker": "^1.0",
         "pusher/pusher-php-server": "^3.0",
         "doctrine/dbal": "^2.9",
-        "twilio/sdk": "^5.31"
+        "twilio/sdk": "^5.31",
+        "aloha/twilio": "^4.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
