--- a/composer.json
+++ b/composer.json
@@ -6,18 +6,17 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
-        "algolia/algoliasearch-client-php": "^1.25",
+
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/scout": "^4.0",
         "laravel/tinker": "^1.0",
         "pusher/pusher-php-server": "^3.0",
         "doctrine/dbal": "^2.9",
-        "twilio/sdk": "^5.31",
-        "aloha/twilio": "^4.0"
+        "twilio/sdk": "^5.31"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.2",
+
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
@@ -41,6 +40,8 @@
     "extra": {
         "laravel": {
             "dont-discover": [
+                "algolia/algoliasearch-client-php",
+                "barryvdh/laravel-debugbar"
             ]
         }
     },
